vbnc/vbnc/tests/Errors/30451.vb
Class A
    Sub Main()
        b()
    End Sub
End Class